# crewai-tests

./: .gitignore  pyproject.toml  report.md
agents/: README.md  __init__.py  crew.py  main.py
agents/config/: agents.yaml
notebooks/: semantic-kernel.ipynb
