[project]
name = "agents"
version = "0.1.0"
authors = [
    { name="John Doe", email="john.doe@example.com" }
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.86.0",
    "crewai-tools>=0.17.0",
    "langtrace-python-sdk>=3.3.13",
]

[project.scripts]
agents = "agents.main:run"
run_crew = "agents.main:run"
train = "agents.main:train"
replay = "agents.main:replay"
test = "agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
